# tenniscourt

./: .gitignore  README.md  pyproject.toml  start_gui.sh
configs/: sim.toml
docs/: gui-model-prediction-overlay.md  gui-one-click-start.md  heatmap-loss-v2-plan-results.md  heatmap-training-smoke-results.md  line-detection-simulation-recommendation.md  line-simulation-implementation-plan.md  line-simulation-smoke-results.md  model-optimization-v6-plan-results.md  opencv-viewer-implementation.md  opencv-viewer-smoke-results.md  pose-eval-plan-results.md  remote-heatmap-10000-results.md  render-geometry-fixes.md  render-stability-fixes.md  research-plan.md  synthetic-camera-simulation-research-plan.md  synthetic-camera-simulation-research.md  topdown-render-check.md  training-label-targets.md  visibility-head-v3-plan-results.md  wide-angle-tennis-court-camera-pose-research.md
src/tenniscourt/: __init__.py  camera.py  config.py  court.py  data.py  evaluate_pose.py  generate.py  keypoints.py  model.py  prediction.py  projection_clip.py  render.py  train.py  viewer.py
