[project]
name = "tenniscourt"
version = "0.1.0"
description = "Synthetic tennis court line data generation and segmentation training."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
]

[project.optional-dependencies]
train = [
    "torch>=2.7",
    "tqdm>=4.66",
]

[project.scripts]
tenniscourt-generate = "tenniscourt.generate:main"
tenniscourt-train = "tenniscourt.train:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
